# pcc

./: COPYING  Makefile.in  README.md  config.h.in  config.sub  configure  configure.ac
arch/amd64/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/arm/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/hppa/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/i386/: code.c  flocal.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/i86/: TODO  code.c  flocal.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/m16c/: TODO  code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/m68k/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/mips/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/mips64/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/nova/: README  code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/pdp10/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/pdp11/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/pdp7/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/powerpc/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/sparc64/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
arch/vax/: code.c  local.c  local2.c  macdefs.h  order.c  table.c
cc/: Makefile.in
cc/cc/: Makefile.in  cc.1  cc.c
cc/ccom/: Makefile.in  builtins.c  ccom.1  cgram.y  dwarf.c  gcc_compat.c  init.c  inline.c  main.c  optim.c  pass1.h  pftn.c  scan.l  softfloat.c  stabs.c  symtabs.c  trees.c
cc/cpp/: Makefile.in  cpc.c  cpp.1  cpp.c  cpp.h  cpy.y  scanner.l  token.c
cc/cpp/tests/: res1  res11  res14  res16  res16C  res18  res2  res3  test14  test16  test18  test20  test21
cc/cxxcom/: Makefile.in  builtins.c  cgram.y  cxxcode.c  cxxdefs.h  gcc_compat.c  init.c  inline.c  main.c  optim.c  pass1.h  pftn.c  scan.l  stabs.c  symtabs.c  trees.c
cc/driver/: Makefile.in  driver.c  driver.h  platform.c  strlist.c  strlist.h  xalloc.c  xalloc.h
common/: compat.c  compat.h  softfloat.c  softfloat.h  strtodg.c  unicode.c  unicode.h
f77/: Makefile.in
f77/f77/: Makefile.in  f77.1  f77.c
f77/fcom/: Makefile.in  data.c  defines.h  defs.h  drivedefs.h  equiv.c  error.c  exec.c  expr.c  ftypes.h  gram.dcl  gram.exec  gram.expr  gram.head  init.c  intr.c  io.c  lex.c  main.c  misc.c  proc.c  put.c  putscj.c  scjdefs.h
mip/: common.c  manifest.h  match.c  mkext.c  node.h  optim2.c  pass2.h  protos.h  reader.c  regs.c
os/android/: ccconfig.h
os/bsd/: ccconfig.h
os/darwin/: ccconfig.h
os/dragonfly/: ccconfig.h
os/freebsd/: ccconfig.h
os/inc/: amd64.h
os/linux/: ccconfig.h
os/litebsd/: ccconfig.h
os/midnightbsd/: ccconfig.h
os/minix/: ccconfig.h
os/mirbsd/: ccconfig.h
os/netbsd/: ccconfig.h  f77config.h
os/nextstep/: ccconfig.h
os/none/: ccconfig.h
os/openbsd/: ccconfig.h  f77config.h
os/sunos/: ccconfig.h
os/sysv4/: ccconfig.h
os/win32/: build.bat  ccconfig.h  config.h
